ENH: expressions: improved

--- a/doc/Notes/UGM2025_ET/.vscode/settings.json
+++ b/doc/Notes/UGM2025_ET/.vscode/settings.json
@@ -2,6 +2,6 @@
     "markdown.marp.themes": [
         "./themes",
         "./themes/esi.css",
-        "./themes/theme.css"
+        "./themes/keysight.css",
     ]
 }
